@@ -19,6 +19,7 @@ import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.parallel.Execution;
 
 import java.util.Locale;
 import java.util.Set;
@@ -29,8 +30,10 @@ import static io.trino.plugin.jmx.JmxMetadata.HISTORY_SCHEMA_NAME;
 import static io.trino.plugin.jmx.JmxMetadata.JMX_SCHEMA_NAME;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.TestInstance.Lifecycle.PER_CLASS;
+import static org.junit.jupiter.api.parallel.ExecutionMode.CONCURRENT;
 
 @TestInstance(PER_CLASS)
+@Execution(CONCURRENT)
 public class TestJmxQueries
 {
     private QueryAssertions assertions;
@@ -62,7 +65,7 @@ public class TestJmxQueries
     public void testShowSchemas()
     {
         assertThat(assertions.query("SHOW SCHEMAS"))
-                .matches(result -> result.getOnlyColumnAsSet().equals(ImmutableSet.of(INFORMATION_SCHEMA, JMX_SCHEMA_NAME, HISTORY_SCHEMA_NAME)));
+                .result().onlyColumnAsSet().isEqualTo(Set.of(INFORMATION_SCHEMA, JMX_SCHEMA_NAME, HISTORY_SCHEMA_NAME));
     }
 
     @Test
@@ -73,7 +76,7 @@ public class TestJmxQueries
                 .collect(toImmutableSet());
 
         assertThat(assertions.query("SHOW TABLES"))
-                .matches(result -> result.getOnlyColumnAsSet().containsAll(standardNamesLower));
+                .result().onlyColumnAsSet().containsAll(standardNamesLower);
     }
 
     @Test
@@ -109,9 +112,9 @@ public class TestJmxQueries
                 .succeeds();
 
         assertThat(assertions.query("SELECT * FROM \"java.lang:*\""))
-                .matches(result -> result.getRowCount() > 1);
+                .result().rowCount().isGreaterThan(1);
 
         assertThat(assertions.query("SELECT * FROM \"jAVA.LANg:*\""))
-                .matches(result -> result.getRowCount() > 1);
+                .result().rowCount().isGreaterThan(1);
     }
 }
